# assistant

./: README.md  com.azibom.assistant.json  meson.build  org.gnome.GnomeAiAssistant.json
.github/workflows/: build.yml
data/: com.azibom.assistant.desktop.in  com.azibom.assistant.gschema.xml  com.azibom.assistant.metainfo.xml.in  com.azibom.assistant.service.in  meson.build  org.gnome.GnomeAiAssistant.desktop.in  org.gnome.GnomeAiAssistant.gschema.xml  org.gnome.GnomeAiAssistant.metainfo.xml.in  org.gnome.GnomeAiAssistant.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
python_wheels/: scikit_build_core-0.11.4-py3-none-any.whl
src/: assistant.gresource.xml  assistant.in  commands.py  gnomeaiassistant.gresource.xml  gnomeaiassistant.in  main.py  meson.build  message_item.py  ollama_status_dialog.py  style-dark.css  style.css  window.blp  window.py  window.ui  window_actions.py
src/gtk/: help-overlay.blp  message_item.blp  ollama_status.blp
src/style/: meson.build  style.css
src/utils/: command_utils.py  llm_utils.py  meson.build
